--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,13 +1,36 @@
 <ion-content [fullscreen]="true">
 
-  <ion-slides [options]="slideOpts">
-    <ion-slide *ngFor="let pelicula of peliculasRecientes">
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col>
+        <h3> Películas Nuevas</h3>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
-      <ion-card>
-        <img [src]="pelicula.backdrop_path | imagen">
-      </ion-card>
+  <app-slidesshow-backdrop [peliculas]="peliculasRecientes">
+  </app-slidesshow-backdrop>
 
-    </ion-slide>
-  </ion-slides>
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col>
+        <h3>Cartelera</h3>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <app-slideshow-poster [peliculas]="peliculasRecientes"></app-slideshow-poster>
+
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col>
+        <h3>Populares</h3>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <app-slideshow-poster [peliculas]="populares"></app-slideshow-poster>
+
+
 
 </ion-content>
