--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -29,8 +29,6 @@
     </ion-row>
   </ion-grid>
 
-  <app-slideshow-poster [peliculas]="populares"></app-slideshow-poster>
-
-
+  <app-slideshow-pares [peliculas]="populares" (cargarMas)="cargarMas()"></app-slideshow-pares>
 
 </ion-content>
