--- a/src/app/components/detalle/detalle.component.html
+++ b/src/app/components/detalle/detalle.component.html
@@ -38,9 +38,54 @@
   <ion-grid fixed>
     <ion-row>
       <ion-col size="12">
-        <ion-label> {{ pelicula.overview }} </ion-label>
+        <ion-label> {{ pelicula.overview | slice: 0: oculto }}... </ion-label>
+        <ion-label color="primary" (click)="oculto = 5000" *ngIf="oculto !== 5000">Leer más</ion-label>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col size="12">
+        <ion-chip color="primary" *ngFor="let genero of pelicula.genres">
+          <ion-label> {{ genero.name }} </ion-label>
+        </ion-chip>
       </ion-col>
     </ion-row>
   </ion-grid>
 
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col>
+        <ion-label>Actores</ion-label>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <ion-slides [options]="slideOptActores">
+    <ion-slide *ngFor="let actor of actores">
+      <ion-card class="card-actor">
+        <img *ngIf="!actor.profile_path" src="./assets/no-avatar.jpg">
+        <img *ngIf="actor.profile_path" [src]="actor.profile_path | imagen">
+        <ion-label class="actor-name"> {{ actor.name }} </ion-label>
+      </ion-card>
+    </ion-slide>
+  </ion-slides>
 </ion-content>
+
+<ion-footer class="ion-no-border">
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-button (click)="regressar()">
+        <ion-icon slot="start" name="arrow-back"></ion-icon>
+        <ion-label>Regressar</ion-label>
+      </ion-button>
+    </ion-buttons>
+
+    <ion-buttons slot="end">
+      <ion-button (click)="favorito()">
+        <ion-icon slot="end" name="star-outline"></ion-icon>
+        <ion-label>Favorito</ion-label>
+      </ion-button>
+    </ion-buttons>
+
+  </ion-toolbar>
+</ion-footer>
